--- a/Views/Liste/Index.cshtml
+++ b/Views/Liste/Index.cshtml
@@ -8,6 +8,7 @@
 </div>
 
 <div class="d-flex justify-content-around flex-wrap">
+    <!-- On récupère un objet Projet transmis par ListeController -->
     @foreach (Liste liste in Model.IdListes)
     {
 
